# epubhv

./: .gitignore  README.md  pdm.toml  pyproject.toml  requirements.txt  setup.py  setup.sh  web.py
.github/workflows/: ci.yaml
epubhv/: __init__.py  __main__.py  cli.py  converter.py  epub_processer.py  epubhv.py  punctuation.py  yomituki.py
tests/: test.py  test_epubhv.py
tests/test_epub/: sanguo.epub
tests/test_epub/books/: animal.epub
